# QAM_mod-demod

./: README.md  README_RUS.md
materials/linter/: .clang-format
src/: CMakeLists.txt  build.sh  graf_constellation.py  graf_misses.py  main.cc
src/other_libs/: ext_modules.cc  ext_modules.h
src/qam_classes/: generator_gauss_noise.cc  generator_gauss_noise.h  qam_demodulator.cc  qam_demodulator.h  qam_modulator.cc  qam_modulator.h
